testsuite/tests/typecheck/should_fail/DataToTagFails.stderr

DataToTagFails.hs:10:22: error: [GHC-39999]
    • No instance for ‘DataToTag (Either a b)’
        arising from a use of ‘dataToTag#’
    • In the expression: dataToTag#
      In an equation for ‘hiddenConstructor1’:
          hiddenConstructor1 = dataToTag#

DataToTagFails.hs:13:22: error: [GHC-39999]
    • No instance for ‘DataToTag [a]’
        arising from a use of ‘dataToTag#’
    • In the expression: dataToTag#
      In an equation for ‘hiddenConstructor2’:
          hiddenConstructor2 = dataToTag#

DataToTagFails.hs:16:22: error: [GHC-39999]
    • No instance for ‘DataToTag (a, b, c)’
        arising from a use of ‘dataToTag#’
    • In the expression: dataToTag#
      In an equation for ‘hiddenConstructor3’:
          hiddenConstructor3 = dataToTag#

DataToTagFails.hs:19:21: error: [GHC-39999]
    • No instance for ‘DataToTag (Identity (Maybe a))’
        arising from a use of ‘dataToTag#’
    • In the expression: dataToTag#
      In an equation for ‘newtypesDon'tWork’:
          newtypesDon'tWork = dataToTag#

DataToTagFails.hs:26:25: error: [GHC-39999]
    • No instance for ‘DataToTag (X a)’
        arising from a use of ‘dataToTag#’
    • In the expression: dataToTag#
      In an equation for ‘multipleDataInstances’:
          multipleDataInstances = dataToTag#

DataToTagFails.hs:30:26: error: [GHC-39999]
    • No instance for ‘DataToTag (Word# -> Word# -> Word#)’
        arising from a use of ‘dataToTag#’
        (maybe you haven't applied a function to enough arguments?)
    • In the first argument of ‘I#’, namely ‘(dataToTag# timesWord#)’
      In the expression: I# (dataToTag# timesWord#)
      In an equation for ‘functionsDon'tWork’:
          functionsDon'tWork = I# (dataToTag# timesWord#)

DataToTagFails.hs:35:27: error: [GHC-39999]
    • No instance for ‘DataToTag Y’ arising from a use of ‘dataToTag#’
    • In the first argument of ‘I#’, namely
        ‘(dataToTag# (undefined :: Y))’
      In the expression: I# (dataToTag# (undefined :: Y))
      In an equation for ‘typeDataDoesn'tWork’:
          typeDataDoesn'tWork = I# (dataToTag# (undefined :: Y))
